[package]
name = "abc282"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc282-a", problem = "https://atcoder.jp/contests/abc282/<FIXME: screen name of the problem>"}
b = { name = "abc282-b", problem = "https://atcoder.jp/contests/abc282/<FIXME: screen name of the problem>"}
c = { name = "abc282-c", problem = "https://atcoder.jp/contests/abc282/<FIXME: screen name of the problem>"}
d = { name = "abc282-d", problem = "https://atcoder.jp/contests/abc282/<FIXME: screen name of the problem>"}
e = { name = "abc282-e", problem = "https://atcoder.jp/contests/abc282/<FIXME: screen name of the problem>"}
ex = { name = "abc282-ex", problem = "https://atcoder.jp/contests/abc282/<FIXME: screen name of the problem>"}
f = { name = "abc282-f", problem = "https://atcoder.jp/contests/abc282/<FIXME: screen name of the problem>"}
g = { name = "abc282-g", problem = "https://atcoder.jp/contests/abc282/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc282-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc282-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc282-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc282-d"
path = "./src/bin/d.rs"

[[bin]]
name = "abc282-e"
path = "./src/bin/e.rs"

[[bin]]
name = "abc282-ex"
path = "./src/bin/ex.rs"

[[bin]]
name = "abc282-f"
path = "./src/bin/f.rs"

[[bin]]
name = "abc282-g"
path = "./src/bin/g.rs"
